<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".UI.AssessmentAddEdit">

    <TextView
        android:id="@+id/assessmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/assessment"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/assessment_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:hint="@string/mobile_app_project"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/assessmentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assessmentText" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessmentText" />

    <EditText
        android:id="@+id/assessment_date"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:hint="@string/_08_01_2022a"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/startText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/startText" />

    <TextView
        android:id="@+id/assessmentEndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/end_datea"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startText" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/start_datea"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeText" />

    <EditText
        android:id="@+id/assessment_end"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:hint="@string/_08_10_2022b"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/assessmentEndText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assessmentEndText"
        app:layout_constraintVertical_bias="0.388" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="saveAssessmentButtonClick"
        android:text="@string/savea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessment_end" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/update_assessment"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessment_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerAssessmentType"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/typeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/typeText" />

</androidx.constraintlayout.widget.ConstraintLayout>