<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:layout_marginTop="35dp"
    android:paddingTop="20dp"
    tools:context=".UI.CourseAddEdit">


    <TextView
        android:id="@+id/assessmentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:text="@string/assessments"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_add_edit_save_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assessment_recyclerView"
        android:layout_width="372dp"
        android:layout_height="130dp"
        android:background="@color/purple_500"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessmentText" />

    <Button
        android:id="@+id/course_add_edit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="saveCourseOnClick"
        android:text="@string/save_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_course_notes" />

    <TextView
        android:id="@+id/notesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/add_course_notes"
        app:layout_constraintTop_toBottomOf="@id/statusText" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/end_datee"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/add_course_end_date"
        app:layout_constraintTop_toBottomOf="@+id/startText" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCourseStatus"
        app:layout_constraintTop_toBottomOf="@+id/endText" />

    <EditText
        android:id="@+id/add_course_notes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:ellipsize="end"
        android:hint="@string/ps101"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/notesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notesText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/course_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/add_course_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_course_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:hint="@string/psych_101"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameText" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_datee"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/add_course_start_date"
        app:layout_constraintTop_toBottomOf="@id/nameText" />

    <EditText
        android:id="@+id/add_course_end_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:hint="@string/_10_01_2022"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/endText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endText" />

    <EditText
        android:id="@+id/add_course_start_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:hint="@string/_08_01_2022"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/startText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instructor_recyclerView"
        android:layout_width="370dp"
        android:layout_height="126dp"
        android:background="@color/purple_500"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_instructor_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/add_instructor"
        android:onClick="addInstructorButton"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/instructor_recyclerView"
        app:layout_constraintEnd_toEndOf="@id/instructor_recyclerView"
        app:layout_constraintTop_toTopOf="@+id/instructor_recyclerView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_assessment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/add_assessment"
        android:onClick="addAssessmentButton"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_recyclerView"
        app:layout_constraintEnd_toEndOf="@id/assessment_recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/assessmentText" />

    <TextView
        android:id="@+id/instructorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/purple_500"
        android:text="@string/instructor"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_recyclerView" />

    <Spinner
        android:id="@+id/spinnerCourseStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        app:layout_constraintBottom_toTopOf="@+id/add_course_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_course_end_date" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_to_delete"
        android:textColor="#B8B8B8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>